--- a/index.html
+++ b/index.html
@@ -1,14 +1,142 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Справочник для программиста</title>
+  <link href="css/style.min.css" rel="stylesheet">
+  <script src="js/main.min.js" defer></script>
 </head>
 
 <body>
 
+  <header class="header">
+
+    <div class="header-img">
+      <h1 class="header-title">Справочник для программиста</h1>
+    </div>
+
+    <div class="container">
+
+      <nav class="header-menu">
+
+        <ul class="header-list">
+          <li><a class="header-item" href="index.html">Главная</a></li>
+          <li><a class="header-item" href="htmlcss.html">HTML+CSS</a></li>
+          <li><a class="header-item" href="js.html">JAVASCRIPT</a></li>
+          <li><a class="header-item" href="php.html">PHP</a></li>
+          <li><a class="header-item" href="c.html">C</a></li>
+        </ul>
+        <div class="header-search">
+          <input type="text">
+          <img src="#" alt="Search">
+        </div>
+      </nav>
+
+    </div>
+
+  </header>
+
+<main>
+  <div class="container">
+    <div class="crumbs">
+      <img src="../images/right-arrow.svg" alt="Right arrow">
+      <p class="crumbs__title"><a href="#">CSS</a></p>
+      <img src="../images/right-arrow.svg" alt="Right arrow">
+      <p class="crumbs__title">Flex</p>
+    </div>
+
+    <div class="wrapper">
+
+      <aside class="menu">
+        <ul class="menu-list">
+          <li>
+            <a href="htmlcss.html">HTML+CSS</a>
+          </li>
+          <li>
+            <ul class="menu-list__items">
+              <li><a href="#">Flex</a></li>
+              <li><a href="#">Grid</a></li>
+            </ul>
+          </li>
+
+          <li>
+            <a href="js.html">JAVASCRIPT</a>
+          </li>
+          <li>
+            <ul class="menu-list__items">
+              <li><a href="#">Promise</a></li>
+              <li><a href="#">ООП</a></li>
+            </ul>
+          </li>
+
+          <li>
+            <a href="php.html">PHP</a>
+          </li>
+          <li>
+            <ul class="menu-list__items">
+              <li><a href="#">Type Hinting</a></li>
+              <li><a href="#">ООП</a></li>
+            </ul>
+          </li>
+
+          <li>
+            <a href="c.html">C</a>
+          </li>
+          <li>
+            <ul class="menu-list__items">
+              <li><a href="#">Указатели</a></li>
+              <li><a href="#">Динамическая память</a></li>
+              <li><a href="#">Связные списки</a></li>
+            </ul>
+          </li>
+        </ul>
+      </aside>
+
+      <section class="content">
+        <div class="">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quam sit magnam accusamus ab cum unde
+          perspiciatis dicta ipsa corporis, facilis laborum necessitatibus culpa fugit aliquam facere. Deleniti mollitia
+          possimus officia.lo</div>
+      </section>
+
+    </div>
+  </div>
+</main>
+
+
+<footer class="footer">
+
+
+  <div class="container">
+
+
+    <div class="footer-rights">
+
+
+      <p>© 2024</p>
+
+
+      <a href="https://help-parts.ru">help-parts.ru</a>
+
+
+    </div>
+
+
+  </div>
+
+
+</footer>
+
+
+
+
+
 </body>
+
+
+
+
 
 </html>
