--- a/404.html
+++ b/404.html
@@ -7,7 +7,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Справочник для программиста</title>
   <link href="css/style.min.css" rel="stylesheet">
+  <link href="css/materia.min.css" rel="stylesheet">
   <script src="js/main.min.js" defer></script>
+  <script src="js/highlight.min.js"></script>
+  <script>hljs.highlightAll();</script>
 </head>
 
 <body>
