--- a/windows.html
+++ b/windows.html
@@ -54,8 +54,8 @@
   <div class="container">
     <div class="crumbs">
       <img src="../images/right-arrow.svg" alt="Right arrow">
-      <!-- <p class="crumbs__title"><a href="#">CSS</a></p>
-      <img src="../images/right-arrow.svg" alt="Right arrow">
+      <p class="crumbs__title"><a href="windows.html">Windows</a></p>
+      <!-- <img src="../images/right-arrow.svg" alt="Right arrow">
       <p class="crumbs__title">Flex</p> -->
     </div>
 
@@ -154,28 +154,11 @@
       <section class="content">
 
         <div class="content-item">
-          <a href="make.html">
-            <h2>Makefile</h2>
-
-            <div class="content-item__code">
-              Makefile — это специальный файл, используемый утилитой make для автоматизации сборки
-              программ. Он содержит
-              правила и инструкции, которые описывают, как собирать, компилировать и связывать программы.
-              Makefile
-              помогает автоматизировать процесс сборки, избавляя разработчика от необходимости вручную
-              выполнять команды
-              компиляции и управления зависимостями.
-            </div>
-          </a>
-        </div>
-
-        <div class="content-item">
           <a href="wsl.html">
             <h2>WSL (Windows Subsystem for Linux)</h2>
 
             <div class="content-item__code">
-              Подсистема Windows для Linux (WSL) — это функция Windows, которая позволяет запускать среду
-              Linux на
+              Подсистема Windows для Linux (WSL) — это функция Windows, которая позволяет запускать среду Linux на
               компьютере Windows без необходимости отдельной виртуальной машины или двойной загрузки.
             </div>
           </a>
